--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
 </head>
 
 <body>
-  <div id="app">
-    <div class="clock">
-      <span class="clock__hours">00</span>:<span class="clock__minutes">00</span>
-    </div>
-  </div>
+  <div id="app"></div>
 </body>
 
 </html>
